<resources>
    <string name="app_name">WanAndroid</string>
    <string name="home_main">首页</string>
    <string name="home_project">项目</string>
    <string name="home_navi">导航</string>
    <string name="home_me">我</string>
    <string name="home_search_hint">搜索关键词以空格形式分开</string>
    <string name="cancel">取消</string>
    <string name="history_hint">历史记录</string>
    <string name="hot_search">热搜</string>
    <string name="recently_used_website">常用网站</string>
</resources>
